<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/u_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u_heading"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/u_view_name"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:text="@string/u_view_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/u_view_cn"
        app:layout_constraintEnd_toStartOf="@+id/u_pt_name"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u_heading"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/u_view_cn"
        android:layout_width="152dp"
        android:layout_height="33dp"
        android:layout_marginBottom="36dp"
        android:text="@string/u_view_cn"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/u_view_email"
        app:layout_constraintEnd_toStartOf="@+id/u_pt_cn"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/u_view_email"
        android:layout_width="53dp"
        android:layout_height="31dp"
        android:text="@string/u_view_email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/u_pt_email"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <EditText
        android:id="@+id/u_pt_name"
        android:layout_width="207dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/u_pt_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/u_pt_cn"
        app:layout_constraintTop_toBottomOf="@+id/u_heading"
        app:layout_constraintVertical_bias="0.566"
        tools:layout_editor_absoluteX="184dp" />

    <EditText
        android:id="@+id/u_pt_cn"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/u_pt_cn"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="214dp" />

    <EditText
        android:id="@+id/u_pt_email"
        android:layout_width="211dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/u_pt_email"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="385dp" />


</androidx.constraintlayout.widget.ConstraintLayout>