<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/acc_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/acc_heading"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="103dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_heading"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/acc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/acc_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/acc_cn"
        app:layout_constraintEnd_toStartOf="@+id/acc_view_name"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/acc_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/acc_cn"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/acc_email"
        app:layout_constraintEnd_toStartOf="@+id/acc_view_cn"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/acc_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/acc_email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rent"
        app:layout_constraintEnd_toStartOf="@+id/acc_view_email"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/acc_view_name"
        android:layout_width="89dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:text="@string/acc_view_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/acc_view_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/acc_view_cn"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/acc_view_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_view_name"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/acc_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/acc_view_email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sell"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/rent"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:text="@string/rent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/update_acc"
        app:layout_constraintEnd_toStartOf="@+id/sell"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sell"
        android:layout_width="151dp"
        android:layout_height="44dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/sell"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/update_acc"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/update_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_acc"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/delete_acc"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>