<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerMain">

    <TextView
        android:id="@+id/heading"
        android:layout_width="258dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:text="Register as a Seller"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_name"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="380dp"
        android:text="@string/input_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pt_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/input_cn"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/input_cn"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toStartOf="@+id/pt_cn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/input_email"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="36dp"
        android:text="@string/input_email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_pswd"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/input_pswd"
        android:layout_width="114dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="160dp"
        android:text="@string/input_pswd"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:ems="10"
        android:hint="@string/pt_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/pt_cn"
        app:layout_constraintStart_toEndOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.537" />

    <EditText
        android:id="@+id/pt_cn"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/pt_cn"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/pt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:hint="@string/pt_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/pt_pswd"
        app:layout_constraintStart_toEndOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/pt_cn"
        app:layout_constraintVertical_bias="0.509" />

    <EditText
        android:id="@+id/pt_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/pt_pswd"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/input_pswd"
        tools:layout_editor_absoluteY="397dp" />

    <CheckBox
        android:id="@+id/tc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pswd" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sellersubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="526dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

