<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateDiscount">
    <TextView
        android:id="@+id/disco_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/title_discount"
        android:textColor="@color/blackColor"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/discoage"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disco_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/background"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/discoyears"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discoage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/background"
        android:hint="@string/registered"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:id="@+id/discoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discoyears"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-22dp"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/discount"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/discountcalculate"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_below="@+id/discoo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/background"
        android:text="@string/discount_title"
        android:textColor="@color/blackColor"
        android:textStyle="bold" />


</RelativeLayout>